time continues to the present in json file

--- a/enzymes/templates/example_custom_categories.htm
+++ b/enzymes/templates/example_custom_categories.htm
@@ -50,6 +50,10 @@
                 [
                     "1961-01-01",
                     "created  1961"
+                ],
+                [
+                    "2017-01-01",
+                    "created  1961"
                 ]
             ]
         },
@@ -64,6 +68,10 @@
             "data": [
                 [
                     "1961-01-01",
+                    "created  1961"
+                ],
+                [
+                    "2017-01-01",
                     "created  1961"
                 ]
             ]
@@ -87,6 +95,10 @@
                 [
                     "1976-01-01",
                     "modified  1976"
+                ],
+                [
+                    "2017-01-01",
+                    "modified  1976"
                 ]
             ]
         },
@@ -109,6 +121,10 @@
                 [
                     "1976-01-01",
                     "modified  1976"
+                ],
+                [
+                    "2017-01-01",
+                    "modified  1976"
                 ]
             ]
         },
@@ -128,6 +144,160 @@
                 [
                     "2007-01-01",
                     "created  2007"
+                ],
+                [
+                    "2017-01-01",
+                    "created  2007"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.103",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "2017-01-01",
+                    "created  1972"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.104",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "2017-01-01",
+                    "created  1972"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.105",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                },
+                "modified  2011": {
+                    "color": "black"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "2011-01-01",
+                    "modified  2011"
+                ],
+                [
+                    "2017-01-01",
+                    "modified  2011"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.106",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                },
+                "modified  1976": {
+                    "color": "black"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "1976-01-01",
+                    "modified  1976"
+                ],
+                [
+                    "2017-01-01",
+                    "modified  1976"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.107",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "2017-01-01",
+                    "created  1972"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.108",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "2017-01-01",
+                    "created  1972"
+                ]
+            ]
+        },
+        {
+            "measure": "1.1.1.109",
+            "interval_s": 31536000,
+            "categories": {
+                "created  1972": {
+                    "color": "red"
+                },
+                "deleted  1976": {
+                    "color": "black"
+                }
+            },
+            "data": [
+                [
+                    "1972-01-01",
+                    "created  1972"
+                ],
+                [
+                    "1976-01-01",
+                    "deleted  1976"
                 ]
             ]
         }];
